force-app/main/default/objects/Outbound_Communication__e/Outbound_Communication__e.object-meta.xml
<CustomObject>
    <label>Outbound Communication</label>
    <pluralLabel>Outbound Communications</pluralLabel>
</CustomObject>