force-app/main/default/objects/Outbound_Communication__e/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>