force-app/main/default/objects/Outbound_Communication__e/fields/LogID__c.field-meta.xml
<CustomField>
    <fullName>LogID__c</fullName>
    <label>LogID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>