force-app/main/default/objects/Outbound_Communication__e/fields/SMS_Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sender_Id__c</fullName>
    <label>SMS Sender Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>