force-app/main/default/objects/Outbound_Communication__e/fields/Txt_Msg__c.field-meta.xml
<CustomField>
    <fullName>Txt_Msg__c</fullName>
    <label>Txt Msg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>