force-app/main/default/objects/Outbound_Communication__e/fields/WhatsApp_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Entity_Id__c</fullName>
    <label>WhatsApp Entity Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>